--- a/views/photo-gallery.html
+++ b/views/photo-gallery.html
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photo gallery</title>
-    <link rel="stylesheet" href="/public/styles/style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
     <nav>
-      <a href="/views/home.html">Home</a>
-      <a href="/views/about.html">About</a>
-      <a href="/views/works.html">Work</a>
-      <a href="/views/photo-gallery.html">Photo Gallery</a>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+      <a href="/work">Work</a>
+      <a href="/photo-gallery">Photo Gallery</a>
     </nav>
     <h1>Photo Gallery</h1>
     <div class="images">
-      <img src="/public/images/stuff_01.png" alt="stuff_01" />
-      <img src="/public/images/stuff_02.png" alt="stuff_02" />
-      <img src="/public/images/stuff_03.png" alt="stuff_03" />
-      <img src="/public/images/stuff_04.png" alt="stuff_04" />
-      <img src="/public/images/stuff_05.png" alt="stuff_05" />
-      <img src="/public/images/stuff_07.jpg" alt="stuff_07" />
-      <img src="/public/images/stuff_08.png" alt="stuff_08" />
-      <img src="/public/images/stuff_09.png" alt="stuff_09" />
-      <img src="/public/images/stuff_10.png" alt="stuff_10" />
-      <img src="/public/images/stuff_11.png" alt="stuff_11" />
+      <img src="/images/stuff_01.png" alt="stuff_01" />
+      <img src="/images/stuff_02.png" alt="stuff_02" />
+      <img src="/images/stuff_03.png" alt="stuff_03" />
+      <img src="/images/stuff_04.png" alt="stuff_04" />
+      <img src="/images/stuff_05.png" alt="stuff_05" />
+      <img src="/images/stuff_07.jpg" alt="stuff_07" />
+      <img src="/images/stuff_08.png" alt="stuff_08" />
+      <img src="/images/stuff_09.png" alt="stuff_09" />
+      <img src="/images/stuff_10.png" alt="stuff_10" />
+      <img src="/images/stuff_11.png" alt="stuff_11" />
     </div>
   </body>
 </html>
