--- a/views/about.html
+++ b/views/about.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="stylesheet" href="/public/styles/style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
     <nav>
-      <a href="/views/home.html">Home</a>
-      <a href="/views/about.html">About</a>
-      <a href="/views/works.html">Work</a>
-      <a href="/views/photo-gallery.html">Photo Gallery</a>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+      <a href="/work">Work</a>
+      <a href="/photo-gallery">Photo Gallery</a>
     </nav>
     <h1>About</h1>
     <div class="about">
